had to remove height: from css for body. The overflow body fix worked

--- a/src/jAlert-v4.css
+++ b/src/jAlert-v4.css
@@ -74,7 +74,6 @@ html,body
 */
 .jAlert > div{
 	position: relative;
-    height: 100%;
 }
 
  /* 
@@ -287,8 +286,6 @@ html,body
     user-select: text;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    height: auto;
-    height: calc(100% - 40px);
 }
 
  /* 
